# zongse-actix

./: .env  .gitattributes  .gitignore  127.0.0.1-key.pem  127.0.0.1.pem  Cargo.toml  README.md
src/: main.rs  schema.rs
src/admin/: admin_login.rs  auth.rs  file.rs  mod.rs  new_post.rs  post.rs
src/model/: crud.rs  mod.rs  model_comment.rs  model_post.rs  model_user.rs
src/router/: index.rs  mod.rs  post.rs
src/utils/: connections.rs  email.rs  markdown.rs  middleware.rs  mod.rs  time.rs  url_converter.rs  view_counter.rs
statics/css/: clean-blog.min.css  css  styles.ee0e39ac0a640de2990a.css
statics/js/: 1-es2015.a7a1451a1ffdab95b80d.js  8-es2015.97d7792bf44807bbf918.js  google_signin.js  main-es2015.bc85bd6f00821df024cb.js  main-es5.bc85bd6f00821df024cb.js  runtime-es2015.2c69e91350db0f51b7cf.js  runtime-es5.2c69e91350db0f51b7cf.js
statics/wasm/: Cargo.toml  LICENSE_MIT  index.html  index.js
statics/wasm/pkg/: package.json  wasm.d.ts  wasm.js  wasm_bg.wasm
templates/: about.html  about.html.tera  base.html  footer.html.tera  head.html.tera  index.html  index.html.tera  list.html  navigation.html.tera  post.html  post.html.tera  wasm.html
templates/admin/: admin_login.html  admin_login.html.tera  admin_panel.html  admin_panel.html.tera  change_password.html.tera  edit_post.html  new_post.html.tera
