[package]
name = "zongse-actix"
version = "0.1.0"
authors = ["Yuanyuan2100 <yuanyuan2100@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.1"
env_logger = "0.7"

actix-web = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-http = "1.0.1"

r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
dotenv = "0.15.0"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.51"
tera = { version =  "1.2", features = ["builtins"]}
nanoid = "0.3.0"
time = { version = "0.2", default-features = false, features = ["serde"] }
lazy_static = "1.4.0"
rust-crypto = "0.2.36"
lettre = "0.9.3"
lettre_email = "0.9.3"
linkify = "0.4"
pulldown-cmark = { version = "0.7", default-features = false, features = ["simd"] }

[dependencies.diesel]
version = "1.4.4"
features = ["postgres", "chrono"] 

[dependencies.chrono]
features = ["serde", "rustc-serialize"]
version = "0.4.11"
